# Ml-production-showcase

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  model-retrain.yml
configs/: config.yaml
src/: __init__.py  logger.py  settings.py
src/etl/: __init__.py  delta_writer.py  ingestion.py  spark_session.py  transformations.py
src/ml_pipeline/: __init__.py  features.py  models.py  predict.py  train.py
src/monitoring/: __init__.py  metrics.py
src/nlp/: __init__.py  classifier.py  entity_extractor.py  preprocessor.py
src/serving/: __init__.py  api.py  cache.py
tests/: conftest.py  test_ml_pipeline.py  test_nlp.py  test_serving.py
