[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-platform"
version = "1.0.0"
description = "Production-grade ML platform: ETL, model training, NLP automation, real-time serving"
authors = [{ name = "Sam", email = "ksujay2909@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
